objects/CICD_JiraSyncVariation__mdt.object
<CustomObject>
    <fields>
        <fullName>CICD_JiraIssueFieldName__c</fullName>
        <inlineHelpText>Jira Issue Field Path that determines the configuration when syncing to Salesforce from Jira</inlineHelpText>
        <label>Jira Issue Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICD_SfFieldApiName__c</fullName>
        <inlineHelpText>Field Name on the sobject, that determines the Jira Sync Configuration when syncing to Jira</inlineHelpText>
        <label>SF Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICD_SfObjectApiName__c</fullName>
        <label>SF Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Jira Sync Variation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CICD_SfObjectApiName__c</columns>
        <columns>CICD_SfFieldApiName__c</columns>
        <columns>CICD_JiraIssueFieldName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Jira Sync Variations</pluralLabel>
</CustomObject>